# ChangelogEditor

./: .gitignore  CMakeLists.txt  ChangeLogEditor.qml  ChangeLogItem.qml  ChangeLogManager.cpp  ChangeLogManager.h  ChangeLogView.qml  Main.qml  ProductionViewer.qml  README.md  WorkspaceEditor.qml  main.cpp  resources.qrc  windeployqt.txt
